--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -1148,11 +1148,6 @@ div.faq_body {
 td.descriptionbox  a { 
 }
 
-.editfacts { /* a container for the following three links */
-	clear: left;
-	padding-top: 15px;
-}
-
 .editfacts  a:hover { 
 	background-color: transparent;
 }
@@ -1166,11 +1161,19 @@ td.descriptionbox  a {
 	width: 20px;
 	float: left;
 }
+html[dir='rtl'] .editlink, html[dir='rtl'] editlink  {
+	background: url(images/edit_sm.png) no-repeat right center;
+	float: right;
+}
 
 .copylink  {
 	background: url(images/copy.png) no-repeat left center;
 	width: 20px;
 	float: left;
+}
+html[dir='rtl'] .copylink, html[dir='rtl'] copylink  {
+	background: url(images/copy.png) no-repeat right center;
+	float: right;
 }
 
 .deletelink  {
@@ -1178,3 +1181,8 @@ td.descriptionbox  a {
 	width: 20px;
 	float: left;
 }
+html[dir='rtl'] .deletelink, html[dir='rtl'] deletelink  {
+	background: url(images/delete.png) no-repeat right center;
+	float: right;
+}
+
